trunk/Archive2/3d/1d66381df67a66/output
cc1plus: warning: command line option '-std=gnu99' is valid for C/ObjC but not for C++
main.cpp:20:5: warning: identifier 'nullptr' is a keyword in C++11 [-Wc++0x-compat]
     T* last_constructed = nullptr;
     ^
main.cpp:2:87: error: variable or field 'better_insert' declared void
 template<typename T, typename VecIterator, typename Iterator> void better_insert(std::vector<T>& vec, VecIterator where, Iterator begin, Iterator end) {
                                                                                       ^
main.cpp:2:82: error: 'vector' is not a member of 'std'
 template<typename T, typename VecIterator, typename Iterator> void better_insert(std::vector<T>& vec, VecIterator where, Iterator begin, Iterator end) {
                                                                                  ^
main.cpp:2:95: error: expected primary-expression before '>' token
 template<typename T, typename VecIterator, typename Iterator> void better_insert(std::vector<T>& vec, VecIterator where, Iterator begin, Iterator end) {
                                                                                               ^
main.cpp:2:98: error: 'vec' was not declared in this scope
 template<typename T, typename VecIterator, typename Iterator> void better_insert(std::vector<T>& vec, VecIterator where, Iterator begin, Iterator end) {
                                                                                                  ^
main.cpp:2:115: error: expected primary-expression before 'where'
 template<typename T, typename VecIterator, typename Iterator> void better_insert(std::vector<T>& vec, VecIterator where, Iterator begin, Iterator end) {
                                                                                                                   ^
main.cpp:2:131: error: expected primary-expression before 'begin'
 template<typename T, typename VecIterator, typename Iterator> void better_insert(std::vector<T>& vec, VecIterator where, Iterator begin, Iterator end) {
                                                                                                                                   ^
main.cpp:2:147: error: expected primary-expression before 'end'
 template<typename T, typename VecIterator, typename Iterator> void better_insert(std::vector<T>& vec, VecIterator where, Iterator begin, Iterator end) {
                                                                                                                                                   ^
